--- a/KotlinSkeleton/app/build.gradle
+++ b/KotlinSkeleton/app/build.gradle
@@ -52,6 +52,17 @@ dependencies {
     testCompile("com.squareup.assertj:assertj-android:${androidAssertJVersion}"){
         exclude group: 'com.android.support', module: 'support-annotations'
     }
+
+
+    testCompile("org.robolectric:robolectric:3.0") {
+        exclude group: 'commons-logging', module: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
+    testCompile("org.robolectric:shadows-support-v4:3.0") {
+        exclude group: 'commons-logging', module: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
+
     testCompile "org.jetbrains.spek:spek:${spekVersion}"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
